[tool.poetry]
name = "pagarme-diagram"
version = "0.0.1"
description = "Pagar.me infrastructure and applications diagram"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
diagrams = "v0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
